Add AppTheme to MainActivity.kt and make better UX with implementation of card expand e add publicKey to Node card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="alias">Alias</string>
     <string name="country">País</string>
     <string name="first_seem">Primeiro visto</string>
+    <string name="public_key">chave pública</string>
 </resources>
